# we_chat_gpt

./: Cargo.toml  README.md
config/: Settings.toml
src/: cache.rs  database.rs  error.rs  handlers.rs  main.rs  settings.rs
src/api/: chat_gpt.rs  chat_gpt_35_turbo.rs  chat_gpt_text_davinci_003.rs  mod.rs  wechat.rs
