[package]
name = "the-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
reqwest = { version = "0.11.5", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde-xml-rs = "0.5.1"
thiserror = "1.0.30"
serde_urlencoded = "0.7.1"
url = "2.3.1"
simple_logger = "4.0.0"
log = "0.4.17"
config = "0.13.3"
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "mysql"] }
async-trait = "0.1.64"
actix-xml = "0.2.0"
sha1 = "0.10.5"
hex = "0.4.3"
tokio = "1.26.0"

[dev-dependencies]
tokio = { version = "1.14", features = ["full"] }
